--- a/src/style.css
+++ b/src/style.css
@@ -382,6 +382,17 @@ main > * {
 
 /* || components */
 
+.input-pane {
+  border: 1px solid purple;
+}
+
+.display-pane {
+  border: 1px solid orange;
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-rows: repeat(4, 1fr);
+}
+
 /* || header and footer */
 
 /* || navigation */
