--- a/src/style.css
+++ b/src/style.css
@@ -373,11 +373,12 @@ header {
 
 main {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 30% 1fr;
 }
 
 main > * {
   min-height: 500px;
+  align-items: center;
 }
 
 /* || components */
@@ -391,6 +392,7 @@ main > * {
   display: grid;
   grid-auto-flow: column;
   grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: 30% 1fr;
 }
 
 /* || header and footer */
