--- a/src/style.css
+++ b/src/style.css
@@ -374,6 +374,8 @@ header {
 main {
   display: grid;
   grid-template-columns: 30% 1fr;
+  max-width: 900px;
+  margin: 0 auto;
 }
 
 main > * {
@@ -385,6 +387,25 @@ main > * {
 
 .input-pane {
   border: 1px solid purple;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.input-form {
+  display: grid;
+  grid-auto-flow: row;
+  gap: 1rem;
+}
+
+.radio-options {
+}
+
+.radio-options > * {
+  display: grid;
+  grid-template-columns: 10% 1fr;
+  margin: 0.5rem;
 }
 
 .display-pane {
@@ -393,6 +414,7 @@ main > * {
   grid-auto-flow: column;
   grid-template-rows: repeat(4, 1fr);
   grid-template-columns: 30% 1fr;
+  padding: 1rem;
 }
 
 /* || header and footer */
